# TwinAE-ManifoldAlignment

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTEBOOK_IMPORT_FIXES.md  PAPER_ALIGNMENT_CHANGES.md  README.md  REQUIREMENTS_ANALYSIS.md  RESTRUCTURING_SUMMARY.md  TODO.md  diabetes.csv  ecoli_5.csv  ionosphere.csv  parkinsons.csv  pyproject.toml  requirements.txt  setup.py  test_manifold_algorithms.py  tic-tac-toe.csv
CSV Files/: Timeless Variables 2024-07-09.csv  Visit Variables 2024-07-09.csv  balance_scale.csv  heart_disease.csv
Graph-Manifold-AlignmentManifoldData/audiology/: SPUD(r1825)_Ope(abs)_Kin(distance)_AP(0.05-0.1-0.15-0.2-0.3)_38.npy  SPUD(r1825)_Ope(average)_Kin(pure)_AP(0.05-0.1-0.15-0.2-0.3)_38.npy  SPUD(r2003)_Ope(abs)_Kin(pure)_AP(0.05-0.1-0.15-0.2-0.3)_38.npy  SPUD(r2003)_Ope(average)_Kin(distance)_AP(0.05-0.1-0.15-0.2-0.3)_38.npy  SPUD(r2003)_Ope(average)_Kin(pure)_AP(0.05-0.1-0.15-0.2-0.3)_38.npy  SPUD(r2003)_Ope(average)_Kin(similarity)_AP(0.05-0.1-0.15-0.2-0.3)_38.npy  SPUD(r3101)_Ope(abs)_Kin(distance)_AP(0.05-0.1-0.15-0.2-0.3)_38.npy  SPUD(r3101)_Ope(abs)_Kin(similarity)_AP(0.05-0.1-0.15-0.2-0.3)_38.npy  SPUD(r3101)_Ope(average)_Kin(similarity)_AP(0.05-0.1-0.15-0.2-0.3)_38.npy  SPUD(r4498)_Ope(abs)_Kin(distance)_AP(0.05-0.1-0.15-0.2-0.3)_38.npy  SPUD(r4498)_Ope(average)_Kin(distance)_AP(0.05-0.1-0.15-0.2-0.3)_38.npy  SPUD(r4498)_Ope(average)_Kin(similarity)_AP(0.05-0.1-0.15-0.2-0.3)_38.npy  (+21 more)
ManifoldData/: Time_DataFrame.csv
Python Files/: DTA_andres.py  SPUD.py  mali.py  manifold_alignment.py  ssma.py  test_manifold_algorithms.py  utils.py
Python_Files/: DIG.py  DIG_V2.py  DIG_final.py  DTA_andres.py  DataVisualizationTests.ipynb  Demonstration SPUD.ipynb  Demonstration.ipynb  Domain Validation Script.ipynb  KEMA.m  KEMA_Python.py  KMA.m  MAD.py  MAGAN.py  MAGAN_TF115.py  MASH.py  MASH_MD.py  Multiple_domain.ipynb  Pipeline.py  RF_GAP_tests.ipynb  Reg_Visualization.ipynb  SPUD.py  SPUD_Copy.py  Triangular.py  Visualization_helpers.py  delete_me.ipynb  general_tests.ipynb  get_data_sizes.ipynb  jlma.py  ma_procrustes.py  mali.py  nama.py  normalized_eucidean_distance.py  regression_helpers.py  regression_tests.ipynb  rfgap.py  ssma.py  temporal_progression_comparisons.py  test_all.py  test_manifold_algorithms.py  utils.py
TwinAE-MA/: demonstration.ipynb  setup.py
Twin_Autoencoder_Structure/: AutoEncoders.py  __init__.py
adamsenv/: pyvenv.cfg
docs/: APPLICATIONS.md  PAPER_OVERVIEW.md
myvenv/: pyvenv.cfg
scripts/: Pipeline.py  baselineTests.py  grae_pipeline.py  run_pipeline.py
smaller_regression_datasets/: AirfoilSelfNoise.csv  AutoMPG.csv  ConcreteSlumpTest.csv  EnergyEfficiency.csv  FacebookMetrics.csv  Hydrodynamics.csv  OpticalNetwork.csv  Parkinsons.csv
tests/: __init__.py  test_basic.py  test_manifold_algorithms.py
(+100518 files in other folders)
